# serializer version: 1
# name: test_user_schema_with_examples
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/api/v1/user/": {
        "post": {
          "operationId": "postUsercontrollerApiV1User",
          "requestBody": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": true,
                  "type": "object",
                  "example": {
                    "GMPXMVbyXHUfymCDaloV": "39d864419"
                  }
                }
              }
            },
            "required": true
          },
          "responses": {
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/_UserModel"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "_Status": {
          "type": "string",
          "enum": [
            "active",
            "inactive"
          ],
          "title": "_Status"
        },
        "_UserModel": {
          "properties": {
            "age": {
              "type": "integer",
              "maximum": 100,
              "exclusiveMinimum": 0,
              "title": "Age"
            },
            "username": {
              "type": "string",
              "title": "Username"
            },
            "status": {
              "$ref": "#/components/schemas/_Status"
            },
            "email": {
              "type": "string",
              "title": "Email"
            },
            "salary": {
              "type": "number",
              "title": "Salary"
            },
            "tags": {
              "items": {
                "type": "string"
              },
              "type": "array",
              "title": "Tags"
            },
            "metadata": {
              "additionalProperties": {
                "type": "string"
              },
              "type": "object",
              "title": "Metadata"
            },
            "created_at": {
              "type": "string",
              "format": "date-time",
              "title": "Created At"
            }
          },
          "type": "object",
          "required": [
            "age",
            "username",
            "status",
            "email",
            "salary",
            "tags",
            "metadata",
            "created_at"
          ],
          "title": "_UserModel"
        },
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details.",
          "example": {
            "detail": [
              {
                "msg": "GMPXMVbyXHUfymCDaloV",
                "loc": [
                  "NiPhGgaTklZTpXCJkWJY"
                ]
              }
            ]
          }
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_user_schema_with_existing_examples
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/api/v1/user/": {
        "post": {
          "operationId": "postExistingexamplecontrollerApiV1User",
          "responses": {
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/_WithExistingExampleModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "_WithExistingExampleModel": {
          "properties": {
            "field": {
              "type": "string",
              "title": "Field"
            }
          },
          "type": "object",
          "required": [
            "field"
          ],
          "title": "_WithExistingExampleModel",
          "example": {
            "field": "example@email.com"
          }
        },
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details.",
          "example": {
            "detail": [
              {
                "msg": "GMPXMVbyXHUfymCDaloV",
                "loc": [
                  "NiPhGgaTklZTpXCJkWJY"
                ]
              }
            ]
          }
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
